fix: dark mode view

--- a/_sass/classes.sass
+++ b/_sass/classes.sass
@@ -40,6 +40,7 @@
 
 .category-box
   color: #484848
+  background-color: white
   border: 1px solid
   border-color: #DCDCDC
   border-radius: 3px
@@ -95,6 +96,7 @@ a:hover .icon
   color: rgb(92, 62, 175)
 
 .archive-group
+  color: black
   padding: 2%
   background-color: rgb(253, 249, 242)
   box-shadow: 0px 5px rgb(184, 182, 181)
